Solutions	Hero: Solved text	too large, color

--- a/assets/css/partials/_solutions.scss
+++ b/assets/css/partials/_solutions.scss
@@ -43,9 +43,9 @@
         left: 0;
         width: 100%;
         text-align: center;
-        color: #e4b7b2 /*#dedee3*/
-    ;
-        font-size: 22rem;
+        color: #e4b7b2;
+        font-size: 20rem;
+        opacity: 0.5;
     }
     & .back {
         position: absolute;
